--- a/train_xgb_lgb.ipynb
+++ b/train_xgb_lgb.ipynb
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ceb0f52f",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "439524e2",
@@ -28,13 +36,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022/02/25 08:16:05 INFO mlflow.tracking.fluent: Experiment with name 'iris' does not exist. Creating a new experiment.\n"
+      "2022/03/01 10:20:21 INFO mlflow.tracking.fluent: Experiment with name 'iris' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='./myml/1', experiment_id='1', lifecycle_stage='active', name='iris', tags={}>"
+       "<Experiment: artifact_location='./myml/3', experiment_id='3', lifecycle_stage='active', name='iris', tags={}>"
       ]
      },
      "execution_count": 2,
@@ -53,6 +61,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73a7f042",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f4f63b3d",
@@ -68,8 +84,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9c536d1",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "2781b0da",
    "metadata": {},
    "outputs": [],
@@ -92,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3440be1d",
    "metadata": {},
    "outputs": [],
@@ -106,8 +130,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8079b443",
+   "metadata": {},
+   "source": [
+    "## Train LGBM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8efa486c",
    "metadata": {},
    "outputs": [
@@ -115,16 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000049 seconds.\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000076 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 89\n",
       "[LightGBM] [Info] Number of data points in the train set: 120, number of used features: 4\n",
       "[LightGBM] [Info] Start training from score -1.176574\n",
       "[LightGBM] [Info] Start training from score -1.003302\n",
       "[LightGBM] [Info] Start training from score -1.123930\n",
-      "Training until validation scores don't improve for 10 rounds\n",
+      "Training until validation scores don't improve for 5 rounds\n",
       "Early stopping, best iteration is:\n",
-      "[38]\ttrain's multi_logloss: 0.0633269\tval's multi_logloss: 0.11451\n"
+      "[32]\ttrain's multi_logloss: 0.0801898\tval's multi_logloss: 0.115687\n"
      ]
     }
    ],
@@ -154,8 +186,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42343f13",
+   "metadata": {},
+   "source": [
+    "## Train XGBoost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "e223041e",
    "metadata": {},
    "outputs": [
@@ -163,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[08:19:08] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:576: \n",
+      "[10:20:26] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:576: \n",
       "Parameters: { \"num_leaves\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -171,10 +211,10 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[08:19:08] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "[0]\ttrain-mlogloss:0.97647\tval-mlogloss:0.98181\n",
-      "[50]\ttrain-mlogloss:0.06091\tval-mlogloss:0.09176\n",
-      "[64]\ttrain-mlogloss:0.04813\tval-mlogloss:0.09109\n"
+      "[10:20:26] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[0]\ttrain-mlogloss:1.00071\tval-mlogloss:1.00326\n",
+      "[50]\ttrain-mlogloss:0.07313\tval-mlogloss:0.10459\n",
+      "[62]\ttrain-mlogloss:0.06093\tval-mlogloss:0.10059\n"
      ]
     }
    ],
@@ -206,6 +246,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ede5479b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b951591",
    "metadata": {},
    "outputs": [],
    "source": []
